--- a/TBD/Views/Home/Index.cshtml
+++ b/TBD/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@{
+﻿@model TBD.Controllers.IndexViewModelDave
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>Dave's Test Site Change</h1>
+    <h1>Dave's Test Site</h1>
     <p class="lead">This is a test site to test deployments </p>
+
+    <p>The version is @Model.Version</p>
+    <p>The Environment is @Model.Environment</p>
 </div>
