--- a/TBD/Views/Shared/_Layout.cshtml
+++ b/TBD/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Daves ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Daves ASP.NET Application Small change</p>
         </footer>
     </div>
 
