--- a/TBD/Views/Home/Index.cshtml
+++ b/TBD/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
     ViewBag.Title = "Home Page";
 }
 
+<div>
+
+    Here is the menu
+</div>
+
 <div class="jumbotron">
     <h1>Dave's Test Site</h1>
     <p class="lead">This is a test site to test deployments </p>
