--- a/TBD/Views/Home/Index.cshtml
+++ b/TBD/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-    Here is the menu change again
+    Here is the menu change again => => test 
 </div>
 
 <div class="jumbotron">
@@ -14,6 +14,7 @@
     <p>The version is @Model.Version</p>
     <p>The Environment is @Model.Environment</p>
 
-    <p>New Feature 1</p>
-    <p>New Relaese 1 Change</p>
+    <p>Feature 1</p>
+    <p>Relaese 1 Change</p>
+    <p>New Relaese 1.4 Change</p>
 </div>
